--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/ijly188/nodeExpressMVC#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/mongoose": "^5.11.97",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
@@ -27,7 +29,10 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "mongoose": "^6.0.5"
   }
 }
